--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="./img/short_icon.png">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <title>Blog của tôi</title>
+    <title>Web developer</title>
 </head>
 <body>
     <header>
