--- a/index.html
+++ b/index.html
@@ -6,27 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="./img/short_icon.png">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <title>Web developer</title>
+    <title>Web developer - Đâu chỉ là mỗi coder</title>
 </head>
 <body>
-    <header>
-        <div class="main">
-        <div class="logo">
-            <h1><a href="./index.html">Tiến Đạt</a></h1>
-        </div>
-        <ul>
-            <li><a href="./html/home.html">Blog của tôi</a></li>
-            <li><a href="./html/game.html">Game của tôi</a></li>
-            <li><a href="./html/post.html">Bài viết</a></li>
-            <li><a href="./html/author.html">Tác giả</a></li>
-        </ul>
-        </div>
-        <div class="quote">
-            <h2>"Nếu thanh xuân tôi là một bức tranh, nó thật may mắn được trở nên rực rỡ bởi sự xuất hiện của bạn."</h1>
-        </div>
-        <div class="button">
-            <a href="https://www.google.com/" class="btn">Quay trở lại Google</a>
-        </div>
-    </header>
+    <a href="./Cấu trúc dữ liệu và giải thuật/Chapter.1.1.Principle.Concepts.pdf">Click</a>
 </body>
 </html>
