--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="./img/short_icon.png">
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <title>Web developer - Đâu chỉ là mỗi coder</title>
+    <link rel="stylesheet" type="text/css" href="./index.css">
+    <title>Tien Dat 's Blog</title>
 </head>
 <body>
-    <a href="./Cấu trúc dữ liệu và giải thuật/Chapter.1.1.Principle.Concepts.pdf">Click</a>
+    
 </body>
 </html>
