--- a/index.html
+++ b/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/x-icon" href="./img/short_icon.png">
-    <link rel="stylesheet" type="text/css" href="./index.css">
-    <title>Tien Dat 's Blog</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <th>Product ID</th>
+            <th>Product Name</th> 
+            <th>Quantity</th>
+            <th>Price</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Tivi Sam sung 32in</td> 
+            <td>300</td>
+            <td>10</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Tivi Toshiba 40in</td> 
+            <td>600</td>
+            <td>20</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Tu lanh Sharp 300L</td> 
+            <td>500</td>
+            <td>30</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Dieu hoa Daikin 12000BTU</td> 
+            <td>800</td>
+            <td>16</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>May giat Samsung 12kg</td> 
+            <td>460</td>
+            <td>10</td>
+          </tr>
+    </table>
+    <table>
+        <tr>
+            <th><a href="">1</a></th>
+            <th><a href="">2</a></th> 
+            <th><a href="">Next</a></th>
+          </tr>
+    </table>
 </body>
 </html>
